<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gungnir_description</name>
  <version>1.0.0</version>
  <description>Package containing everything needed to describe the Gungnir manipulator</description>
  <maintainer email="jonas.thorhauge@gmail.com">Jonas Thorhauge-Hansen</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
